# notepad

./: CMakeLists.txt  PKGBUILD  README.md  changelog.txt  notepad.desktop
.github/workflows/: linux.yml  win.yml
docs/: build-linux.md  build-win.md
src/: config.h  main.cpp  notepad.cpp  notepad.h  notepad.pro  notepad.qrc  notepad.rc  notepad.ui  version.h
